address label spacing fix

--- a/sass/blocks/default/components/address.scss
+++ b/sass/blocks/default/components/address.scss
@@ -1,11 +1,13 @@
 .srfm-form-container {
 	.srfm-form {
 		.srfm-address-block {
+			legend {
+				margin-bottom: var( --srfm-gap-below-address-label );
+			}
 			.srfm-block-wrap {
 				display: flex;
 				flex-wrap: wrap;
 				gap: var( --srfm-row-gap-between-fields ) var( --srfm-col-gap-between-fields );
-				margin-top: var( --srfm-gap-below-address-label );
 
 				.srfm-block-single {
 					margin-bottom: 0;
@@ -17,6 +19,10 @@
 					&:focus {
 						z-index: 99;
 					}
+				}
+
+				legend {
+					margin-bottom: 0;
 				}
 			}
 		}
